# matrix-client

./: README.md  pyproject.toml
matrix_client/: __init__.py  authentication.py  client.py  event_dispatcher.py  observer_factory.py
matrix_client/models/: __init__.py  attachment.py  base.py  event.py  message_edit_event.py  message_event.py  myself.py  redaction_event.py  room.py  user.py
